--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,19 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  line-height: 18px;
+  color: black;
+  background-color: white;
+  border-radius: 5px;
+  padding: 6px 18px;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 10px;
+  opacity: 0.7;
+}
